--- a/src/utils/email_templates/verification.html
+++ b/src/utils/email_templates/verification.html
@@ -34,10 +34,15 @@
       .app-title {
         font-size: 2.2em;
         font-weight: bold;
-        color: #2d8cf0;
+        /* color: #2d8cf0; */
         letter-spacing: 0.04em;
         text-align: left;
         line-height: 1.1;
+        background: linear-gradient(90deg, #2d8cf0, #5ad1e6);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        color: transparent;
       }
       .code-box {
         display: inline-block;
